# online-mapping

./: .gitignore  CMakeLists.txt  README.md  env.txt
config/mapping/: front_end.yaml  post_processing.yaml
include/lidar_localization/data_pretreat/: data_pretreat_flow.hpp
include/lidar_localization/global_defination/: global_defination.h.in
include/lidar_localization/mapping/back_end/: back_end.hpp  back_end_flow.hpp
include/lidar_localization/mapping/loop_closing/: loop_closing_flow.hpp
include/lidar_localization/mapping/post_processing/: post_processing.hpp
include/lidar_localization/mapping/viewer/: viewer.hpp
include/lidar_localization/sensor_data/: cloud_data.hpp  gnss_data.hpp  imu_data.hpp  pose_data.hpp
include/lidar_localization/subscriber/: key_frame_subscriber.hpp  velocity_subscriber.hpp
include/lidar_localization/tools/: file_manager.hpp  print_info.hpp
launch/: mapping.launch
rviz/: mapping.rviz
src/: mapping.sh  mapping_my.sh  丹东IMU数据说明.txt
src/apps/: back_end_node.cpp  loop_closing_node.cpp  post_processing_node.cpp  viewer_node.cpp
src/irls_ndt/: .~lving Normal Distribution Transformation.docx  CMakeLists.txt  Solving Normal Distribution Transformation.docx  package.xml
src/irls_ndt/include/irls_ndt/: ndt_leaf.h  ndt_scan_matcher.h  neighbor_finder.h  rigid_estimator.h  voxel_grid_covariance.h
src/irls_ndt/src/: ndt_scan_matcher.cpp  neighbor_finder.cpp  rigid_estimator.cpp  scan_matcher.cpp  voxel_grid_covariance.cpp
src/lidar_localization/: .gitignore  CMakeLists.txt  package.xml  time.txt
src/lidar_localization/cmake/: opencv2.cmake
src/lidar_localization/launch/: mapping.launch  test.launch
src/lidar_localization/rviz/: mapping.rviz  test_frame.rviz
src/mapping/back_end/: back_end.cpp  back_end_flow.cpp
src/mapping/front_end/: front_end.cpp
src/mapping/loop_closing/: loop_closing_flow.cpp
src/mapping/post_processing/: post_processing.cpp  post_processing_flow.cpp
src/mapping/viewer/: viewer.cpp  viewer_flow.cpp
src/models/cloud_filter/: ground_filter.cpp  voxel_filter.cpp
src/models/graph_optimizer/: interface_graph_optimizer.cpp
src/models/scan_adjust/: distortion_adjust.cpp
src/ndt_omp-master/: CMakeLists.txt
src/publisher/: key_frames_publisher.cpp  odometry_publisher.cpp
src/remove/: CMakeLists.txt  package.xml
src/remove/include/: datatype.h  remove.h
src/remove/launch/: remove.launch
src/remove/rviz/: test.rviz
src/remove/src/: main.cpp
src/sensor_data/: imu_data.cpp  loop_pose.cpp  velocity_data.cpp
src/subscriber/: gnss_subscriber.cpp  imu_subscriber.cpp  key_frames_subscriber.cpp  loop_pose_subscriber.cpp  velocity_subscriber.cpp
src/tools/: file_manager.cpp  get_filenames.cpp
(+117 files in other folders)
