<?xml version="1.0"?>
<package format="2">
  <name>irls_ndt</name>
  <version>1.1.0</version>
  <description>The irls_ndt package</description>
  <maintainer email="liyuhang9803@sjtu.edu.cn">Yuhang Li</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>libpcl-all</exec_depend>
</package>
